# gremlin

./: Cargo.toml  README.md  content.txt  massif.out.18003  recieved.txt
src/: main.rs
src/interface/: content.txt  input.rs  mod.rs  popup.rs  ui.rs
src/networking/: mod.rs  status.rs
src/parser/: mod.rs
src/state/: mod.rs
