[package]
name = "gremlin"
version = "0.1.0"
authors = ["actuday6418 <actuday6418@gmail.com>"]
edition = "2018"

[dependencies]
tui="0.14.0"
termion="1.5"
rustls= { version = "0.19", features = ["dangerous_configuration"]}
webpki="*"
webpki-roots="*"
reqwest={version = "0.11.3", features = ["blocking"]}
scraper="*"
tendril="*"
